# canvas-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clean.sh  configure.sh  run.sh
include/: background.h  canvas.h  events.h  geometry.h  windowhandler.h
src/: backgrounds.cpp  bmpcanvas.cpp  canvas.cpp  framebuffercanvas.cpp  geometry.cpp  glfwcanvas.cpp  windowcanvas.cpp  windowhandler.cpp
src/shader/: circle.h  thickline.h  triangle.h
tests/: bmp_test.cpp  window_test.cpp
